gccida/g1/gen_unspecified_parameters_die
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_unspecified_parameters_die/src/dwarf2out.c:10509:30: error: use of undeclared identifier 'a'
fancy_abort( ( const char *)&a, 5026, "add_child_die"); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/gen_unspecified_parameters_die/src/obj/dwarf2out.o] Error 1
